// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`table/Table renders Table with alternating background 1`] = `
.emotion-50 {
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  outline: 0;
  position: relative;
  overflow: auto;
}

.emotion-13 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 10;
}

.emotion-12:not(:last-child) {
  pointer-events: none;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  right: -2px;
  top: 0;
  touch-action: none;
  -webkit-transition: background-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out;
  width: 5px;
  z-index: 1;
}

.emotion-49 {
  position: relative;
}

.emotion-20 {
  box-sizing: border-box;
  width: 100%;
  background: rgba(128,128,128,0);
}

.emotion-3 {
  background-color: #ffffff;
  font-weight: 400;
  margin: 0;
  opacity: 1;
  position: relative;
}

.emotion-3:first-of-type > div {
  border-left: 1px solid rgba(60,60,60,0.1);
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(204,204,204,0.4);
  border-top: 1px solid rgba(60,60,60,0.1);
  border-right: 1px solid rgba(60,60,60,0.1);
  box-sizing: border-box;
  display: block;
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 32px;
  padding: 0 16px;
  -webkit-transition: background-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-right: 1px solid rgba(60,60,60,0.1);
  border-top: 1px solid rgba(60,60,60,0.1);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  margin: 0;
  opacity: 1;
  padding: 4px 16px;
  position: relative;
  -webkit-transition: background-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out;
}

.emotion-15:first-of-type {
  border-left: 1px solid rgba(60,60,60,0.1);
}

.emotion-15:last-of-type {
  border-left: none;
}

.emotion-14 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-43 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-right: 1px solid rgba(60,60,60,0.1);
  border-top: 1px solid rgba(60,60,60,0.1);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  margin: 0;
  opacity: 1;
  padding: 4px 16px;
  position: relative;
  -webkit-transition: background-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out;
  border-bottom: 1px solid rgba(60,60,60,0.1);
}

.emotion-43:first-of-type {
  border-left: 1px solid rgba(60,60,60,0.1);
}

.emotion-43:last-of-type {
  border-left: none;
}

.emotion-27 {
  box-sizing: border-box;
  width: 100%;
  background: rgba(204,204,204,0.2);
}

<div
  className="emotion-50"
  onKeyDown={[Function]}
  role="table"
  style={
    Object {
      "width": "100%",
    }
  }
  tabIndex={0}
>
  <div
    className="emotion-13"
  >
    <div
      className="emotion-12"
      role="row"
      style={
        Object {
          "display": "flex",
          "flex": "1 0 auto",
          "minWidth": "0px",
        }
      }
    >
      <div
        className="emotion-3"
        colSpan={1}
        data-cell-coords="0_-1"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="columnheader"
        selected={false}
        style={
          Object {
            "boxSizing": "border-box",
            "cursor": "pointer",
            "flex": "180 0 auto",
            "minWidth": "0px",
            "position": "relative",
            "width": "180px",
          }
        }
        title="Toggle SortBy"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-0"
          >
            Status
          </div>
          <div
            className="emotion-1"
            draggable={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
            role="separator"
            style={
              Object {
                "cursor": "col-resize",
              }
            }
          />
          
        </div>
      </div>
      <div
        className="emotion-3"
        colSpan={1}
        data-cell-coords="1_-1"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="columnheader"
        selected={false}
        style={
          Object {
            "boxSizing": "border-box",
            "cursor": "pointer",
            "flex": "180 0 auto",
            "minWidth": "0px",
            "position": "relative",
            "width": "180px",
          }
        }
        title="Toggle SortBy"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-0"
          >
            Date
          </div>
          <div
            className="emotion-1"
            draggable={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
            role="separator"
            style={
              Object {
                "cursor": "col-resize",
              }
            }
          />
          
        </div>
      </div>
      <div
        className="emotion-3"
        colSpan={1}
        data-cell-coords="2_-1"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="columnheader"
        selected={false}
        style={
          Object {
            "boxSizing": "border-box",
            "cursor": "pointer",
            "flex": "180 0 auto",
            "minWidth": "0px",
            "position": "relative",
            "width": "180px",
          }
        }
        title="Toggle SortBy"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-0"
          >
            Author
          </div>
          <div
            className="emotion-1"
            draggable={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
            role="separator"
            style={
              Object {
                "cursor": "col-resize",
              }
            }
          />
          
        </div>
      </div>
    </div>
  </div>
  <div
    className="emotion-49"
    role="rowgroup"
  >
    <div>
      <div
        className="emotion-20"
        role="row"
        style={
          Object {
            "display": "flex",
            "flex": "1 0 auto",
            "minWidth": "0px",
          }
        }
      >
        <div
          className="emotion-15"
          data-cell-coords="0_0"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            locked
          </div>
        </div>
        <div
          className="emotion-15"
          data-cell-coords="1_0"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            2020-01-05T14:48:00Z
          </div>
        </div>
        <div
          className="emotion-15"
          data-cell-coords="2_0"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            Sample Author 1 Sample Author 1
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="emotion-27"
        role="row"
        style={
          Object {
            "display": "flex",
            "flex": "1 0 auto",
            "minWidth": "0px",
          }
        }
      >
        <div
          className="emotion-15"
          data-cell-coords="0_1"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            edit
          </div>
        </div>
        <div
          className="emotion-15"
          data-cell-coords="1_1"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            2021-10-06T14:48:00Z
          </div>
        </div>
        <div
          className="emotion-15"
          data-cell-coords="2_1"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            Sample Author 2
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="emotion-20"
        role="row"
        style={
          Object {
            "display": "flex",
            "flex": "1 0 auto",
            "minWidth": "0px",
          }
        }
      >
        <div
          className="emotion-15"
          data-cell-coords="0_2"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            review
          </div>
        </div>
        <div
          className="emotion-15"
          data-cell-coords="1_2"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            2019-03-07T14:48:00Z
          </div>
        </div>
        <div
          className="emotion-15"
          data-cell-coords="2_2"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            Sample Author 3
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="emotion-27"
        role="row"
        style={
          Object {
            "display": "flex",
            "flex": "1 0 auto",
            "minWidth": "0px",
          }
        }
      >
        <div
          className="emotion-15"
          data-cell-coords="0_3"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            submitted
          </div>
        </div>
        <div
          className="emotion-15"
          data-cell-coords="1_3"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            2021-05-08T14:48:00Z
          </div>
        </div>
        <div
          className="emotion-15"
          data-cell-coords="2_3"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            Sample Author 4
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="emotion-20"
        role="row"
        style={
          Object {
            "display": "flex",
            "flex": "1 0 auto",
            "minWidth": "0px",
          }
        }
      >
        <div
          className="emotion-43"
          data-cell-coords="0_4"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            edit
          </div>
        </div>
        <div
          className="emotion-43"
          data-cell-coords="1_4"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            2021-09-11T14:48:00Z
          </div>
        </div>
        <div
          className="emotion-43"
          data-cell-coords="2_4"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            Sample Author 5
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`table/Table renders default Table 1`] = `
.emotion-50 {
  color: #3c3c3c;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  outline: 0;
  position: relative;
  overflow: auto;
}

.emotion-13 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 10;
}

.emotion-12:not(:last-child) {
  pointer-events: none;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  right: -2px;
  top: 0;
  touch-action: none;
  -webkit-transition: background-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out;
  width: 5px;
  z-index: 1;
}

.emotion-49 {
  position: relative;
}

.emotion-20 {
  box-sizing: border-box;
  width: 100%;
  background: rgba(128,128,128,0);
}

.emotion-3 {
  background-color: #ffffff;
  font-weight: 400;
  margin: 0;
  opacity: 1;
  position: relative;
}

.emotion-3:first-of-type > div {
  border-left: 1px solid rgba(60,60,60,0.1);
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(204,204,204,0.4);
  border-top: 1px solid rgba(60,60,60,0.1);
  border-right: 1px solid rgba(60,60,60,0.1);
  box-sizing: border-box;
  display: block;
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 32px;
  padding: 0 16px;
  -webkit-transition: background-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-right: 1px solid rgba(60,60,60,0.1);
  border-top: 1px solid rgba(60,60,60,0.1);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  margin: 0;
  opacity: 1;
  padding: 4px 16px;
  position: relative;
  -webkit-transition: background-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out;
}

.emotion-15:first-of-type {
  border-left: 1px solid rgba(60,60,60,0.1);
}

.emotion-15:last-of-type {
  border-left: none;
}

.emotion-14 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-43 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-right: 1px solid rgba(60,60,60,0.1);
  border-top: 1px solid rgba(60,60,60,0.1);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  margin: 0;
  opacity: 1;
  padding: 4px 16px;
  position: relative;
  -webkit-transition: background-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out;
  border-bottom: 1px solid rgba(60,60,60,0.1);
}

.emotion-43:first-of-type {
  border-left: 1px solid rgba(60,60,60,0.1);
}

.emotion-43:last-of-type {
  border-left: none;
}

<div
  className="emotion-50"
  onKeyDown={[Function]}
  role="table"
  style={
    Object {
      "width": "100%",
    }
  }
  tabIndex={0}
>
  <div
    className="emotion-13"
  >
    <div
      className="emotion-12"
      role="row"
      style={
        Object {
          "display": "flex",
          "flex": "1 0 auto",
          "minWidth": "0px",
        }
      }
    >
      <div
        className="emotion-3"
        colSpan={1}
        data-cell-coords="0_-1"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="columnheader"
        selected={false}
        style={
          Object {
            "boxSizing": "border-box",
            "cursor": "pointer",
            "flex": "180 0 auto",
            "minWidth": "0px",
            "position": "relative",
            "width": "180px",
          }
        }
        title="Toggle SortBy"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-0"
          >
            Status
          </div>
          <div
            className="emotion-1"
            draggable={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
            role="separator"
            style={
              Object {
                "cursor": "col-resize",
              }
            }
          />
          
        </div>
      </div>
      <div
        className="emotion-3"
        colSpan={1}
        data-cell-coords="1_-1"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="columnheader"
        selected={false}
        style={
          Object {
            "boxSizing": "border-box",
            "cursor": "pointer",
            "flex": "180 0 auto",
            "minWidth": "0px",
            "position": "relative",
            "width": "180px",
          }
        }
        title="Toggle SortBy"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-0"
          >
            Date
          </div>
          <div
            className="emotion-1"
            draggable={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
            role="separator"
            style={
              Object {
                "cursor": "col-resize",
              }
            }
          />
          
        </div>
      </div>
      <div
        className="emotion-3"
        colSpan={1}
        data-cell-coords="2_-1"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="columnheader"
        selected={false}
        style={
          Object {
            "boxSizing": "border-box",
            "cursor": "pointer",
            "flex": "180 0 auto",
            "minWidth": "0px",
            "position": "relative",
            "width": "180px",
          }
        }
        title="Toggle SortBy"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-0"
          >
            Author
          </div>
          <div
            className="emotion-1"
            draggable={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
            role="separator"
            style={
              Object {
                "cursor": "col-resize",
              }
            }
          />
          
        </div>
      </div>
    </div>
  </div>
  <div
    className="emotion-49"
    role="rowgroup"
  >
    <div>
      <div
        className="emotion-20"
        role="row"
        style={
          Object {
            "display": "flex",
            "flex": "1 0 auto",
            "minWidth": "0px",
          }
        }
      >
        <div
          className="emotion-15"
          data-cell-coords="0_0"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            locked
          </div>
        </div>
        <div
          className="emotion-15"
          data-cell-coords="1_0"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            2020-01-05T14:48:00Z
          </div>
        </div>
        <div
          className="emotion-15"
          data-cell-coords="2_0"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            Sample Author 1 Sample Author 1
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="emotion-20"
        role="row"
        style={
          Object {
            "display": "flex",
            "flex": "1 0 auto",
            "minWidth": "0px",
          }
        }
      >
        <div
          className="emotion-15"
          data-cell-coords="0_1"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            edit
          </div>
        </div>
        <div
          className="emotion-15"
          data-cell-coords="1_1"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            2021-10-06T14:48:00Z
          </div>
        </div>
        <div
          className="emotion-15"
          data-cell-coords="2_1"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            Sample Author 2
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="emotion-20"
        role="row"
        style={
          Object {
            "display": "flex",
            "flex": "1 0 auto",
            "minWidth": "0px",
          }
        }
      >
        <div
          className="emotion-15"
          data-cell-coords="0_2"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            review
          </div>
        </div>
        <div
          className="emotion-15"
          data-cell-coords="1_2"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            2019-03-07T14:48:00Z
          </div>
        </div>
        <div
          className="emotion-15"
          data-cell-coords="2_2"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            Sample Author 3
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="emotion-20"
        role="row"
        style={
          Object {
            "display": "flex",
            "flex": "1 0 auto",
            "minWidth": "0px",
          }
        }
      >
        <div
          className="emotion-15"
          data-cell-coords="0_3"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            submitted
          </div>
        </div>
        <div
          className="emotion-15"
          data-cell-coords="1_3"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            2021-05-08T14:48:00Z
          </div>
        </div>
        <div
          className="emotion-15"
          data-cell-coords="2_3"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            Sample Author 4
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="emotion-20"
        role="row"
        style={
          Object {
            "display": "flex",
            "flex": "1 0 auto",
            "minWidth": "0px",
          }
        }
      >
        <div
          className="emotion-43"
          data-cell-coords="0_4"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            edit
          </div>
        </div>
        <div
          className="emotion-43"
          data-cell-coords="1_4"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            2021-09-11T14:48:00Z
          </div>
        </div>
        <div
          className="emotion-43"
          data-cell-coords="2_4"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="cell"
          style={
            Object {
              "boxSizing": "border-box",
              "flex": "180 0 auto",
              "minWidth": "0px",
              "width": "180px",
            }
          }
        >
          <div
            className="emotion-14"
          >
            Sample Author 5
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
